--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,24 @@
-asgiref==3.7.2
-Brotli==1.1.0
-certifi==2024.7.4
+asgiref==3.8.1
+attrs==24.3.0
+autobahn==24.4.2
+Automat==24.8.1
 cffi==1.17.1
-charset-normalizer==3.3.2
-cssselect2==0.7.0
-distlib==0.3.9
-Django==5.0.2
-django-browser-reload==1.17.0
-django-tailwind==3.8.0
-djangorestframework==3.15.2
-filelock==3.16.1
-fonttools==4.55.3
-idna==3.7
-numpy==1.26.3
-pillow==10.3.0
-platformdirs==4.3.6
+channels==3.0.4
+constantly==23.10.4
+cryptography==44.0.0
+daphne==3.0.2
+Django==5.1.5
+hyperlink==21.0.0
+idna==3.10
+incremental==24.7.2
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pycparser==2.22
-pydyf==0.11.0
-pyotp==2.9.0
-pyphen==0.17.0
-requests==2.32.3
-setuptools==69.0.3
-sqlparse==0.4.4
-tinycss2==1.4.0
-tinyhtml5==2.0.0
-urllib3==2.2.2
-uv==0.5.9
-virtualenv==20.27.1
-weasyprint==63.1
-webencodings==0.5.1
-wheel==0.42.0
-zopfli==0.2.3.post1
+pyOpenSSL==25.0.0
+service-identity==24.2.0
+setuptools==75.8.0
+sqlparse==0.5.3
+Twisted==24.11.0
+txaio==23.1.1
+typing_extensions==4.12.2
+zope.interface==7.2
